--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "ffmpeg-extract-audio": "^1.0.2",
     "ffmpeg-extract-frames": "^2.0.2",
     "fs-extra": "^11.1.0",
-    "get-video-duration": "^4.1.0"
+    "get-video-duration": "^4.1.0",
+    "image-pixels": "^2.2.2"
   },
   "name": "tiktok_downloader",
   "version": "1.0.0",
